--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="imagem/png" href="hand.svg" >
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="https://use.typekit.net/atb0rcq.css">
     <title>Teste Ímpar</title>
   </head>
   <body>
